--- a/pset8/homepage/about.html
+++ b/pset8/homepage/about.html
@@ -7,6 +7,10 @@
         <!-- bootstrap CDN -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet"/>
         <!-- linking css file -->
         <link href="styles.css" rel="stylesheet">
         <!-- font awesome -->
@@ -47,51 +51,57 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col">
-                        <div id="accordion">
-                            <div class="card">
-                              <div class="card-header" id="headingOne">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <i class="fa-solid fa-plus"></i> Employment
-                                  </button>
-                                </h5>
-                              </div>
-
-                              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                                <div class="card-body">
-                                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <div class="card-header" id="headingTwo">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <i class="fa-solid fa-plus"></i> Education
-                                  </button>
-                                </h5>
-                              </div>
-                              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                                <div class="card-body">
-                                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <div class="card-header" id="headingThree">
-                                <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <i class="fa-solid fa-plus"></i> Learning and Development
-                                  </button>
-                                </h5>
-                              </div>
-                              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                                <div class="card-body">
-                                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
-                              </div>
+                      <div class="accordion accordion-borderless" id="accordionFlushExampleX">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingOneX">
+                            <button class="accordion-button" type="button" data-mdb-toggle="collapse"
+                              data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
+                              Accordion Item #1
+                            </button>
+                          </h2>
+                          <div id="flush-collapseOneX" class="accordion-collapse collapse show"
+                            aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
+                            <div class="accordion-body">
+                              Placeholder content for this accordion, which is intended to demonstrate the
+                              <code>.accordion-flush</code> class. This is the first item's accordion body.
                             </div>
                           </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingTwoX">
+                            <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+                              data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
+                              Accordion Item #2
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
+                            data-mdb-parent="#accordionFlushExampleX">
+                            <div class="accordion-body">
+                              Placeholder content for this accordion, which is intended to demonstrate the
+                              <code>.accordion-flush</code> class. This is the second item's accordion body.
+                              Let's imagine this being filled with some actual content.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingThreeX">
+                            <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+                              data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
+                              Accordion Item #3
+                            </button>
+                          </h2>
+                          <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
+                            data-mdb-parent="#accordionFlushExampleX">
+                            <div class="accordion-body">
+                              Placeholder content for this accordion, which is intended to demonstrate the
+                              <code>.accordion-flush</code> class. This is the third item's accordion body.
+                              Nothing more exciting happening here in terms of content, but just filling up
+                              the space to make it look, at least at first glance, a bit more representative
+                              of how this would look in a real-world application.
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                         <!-- another image can be inserted here -->
                     </div>
                     <div class="col">
